--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <header>
-        <img src=content://com.android.externalstorage.documents/tree/primary%3ADocuments/document/primary%3ADocuments%2FIMG_20250318_105620.jpg>
+        <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
         <div class="header-content">
             <!-- Add your profile picture here -->
            
@@ -116,12 +116,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>web development</b> expert who is passionate about creating dynamic and user-friendly websites. 
-                I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
-                 seamless digital solutions. With over 7 years of experience in the field, I'm dedicated to staying up to date 
-                 with the latest trends and innovations in the 
-                 web development landscape. I'm also committed to helping others learn more about web technologies, 
-                 best practices, and how to build secure and scalable websites.</p>
+            <p>I'm a  bca student and passionate in computer science and web development with hands on experience in html .</p>
 
         </div>
     </section>
@@ -165,7 +160,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="content://com.android.externalstorage.documents/tree/primary%3ADocuments/document/primary%3ADocuments%2Fresume.jpg.png" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.jpg.png" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
