--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <header>
-        <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
+        <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
         <div class="header-content">
             <!-- Add your profile picture here -->
            
